# kanshi-generate

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: cli.rs
tests/fixtures/: mixed_outputs.json  mixed_outputs.kanshi
